Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "# Import pandas\n",
     "# Import matplotlib\n",
-    "# Make sure matplotlib plots appear inline"
+    "# Make sure matplotlib plots appear inline\n"
    ]
   },
   {
