--- a/index.ipynb
+++ b/index.ipynb
@@ -36,7 +36,9 @@
    "source": [
     "# Import pandas\n",
     "# Import matplotlib\n",
-    "# Make sure matplotlib plots appear inline\n"
+    "# Make sure matplotlib plots appear inline\n",
+    "import pandas as pd\n",
+    "import matplotlib as plt\n"
    ]
   },
   {
