--- a/index.ipynb
+++ b/index.ipynb
@@ -30,15 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-7219eb9bdb42>, line 6)",
+     "evalue": "invalid syntax (<ipython-input-3-57ec4b9ed2d8>, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-7219eb9bdb42>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    set %inline matplotlib\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-57ec4b9ed2d8>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    set %inline plt\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -48,7 +48,7 @@
     "# Make sure matplotlib plots appear inline\n",
     "import pandas as pd\n",
     "import matplotlib as plt\n",
-    "set %inline matplotlib"
+    "set %inline plt"
    ]
   },
   {
