Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
     "# Make sure matplotlib plots appear inline\n",
     "import pandas as pd\n",
     "import matplotlib as plt\n",
-    "set %matplotlib inline"
+    "%matplotlib inline"
    ]
   },
   {
