Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -30,18 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-4-c0bb875e51bb>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-c0bb875e51bb>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    set %matplotlib inline\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import pandas\n",
     "# Import matplotlib\n",
@@ -70,7 +61,7 @@
    "outputs": [],
    "source": [
     "# Import the file\n",
-    "df = None\n",
+    "df = pd.read_csv('pol')\n",
     "\n",
     "# Print the first five rows "
    ]
