Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "# Look at the value_counts() of the 'Country Name' column \n",
-    "df.value"
+    "df['Country Name'.value_counts"
    ]
   },
   {
