--- a/index.ipynb
+++ b/index.ipynb
@@ -158,12 +158,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "United Kingdom               57\n",
+       "Zambia                       57\n",
+       "Greece                       57\n",
+       "Turkey                       57\n",
+       "High income                  57\n",
+       "                             ..\n",
+       "Kuwait                       54\n",
+       "Eritrea                      52\n",
+       "Serbia                       27\n",
+       "West Bank and Gaza           27\n",
+       "Sint Maarten (Dutch part)    19\n",
+       "Name: Country Name, Length: 263, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Look at the value_counts() of the 'Country Name' column \n",
-    "df['Country Name'.value_counts"
+    "df['Country Name'].value_counts()"
    ]
   },
   {
