--- a/index.ipynb
+++ b/index.ipynb
@@ -212,7 +212,7 @@
    "outputs": [],
    "source": [
     "# Slice all the rows for USA\n",
-    "usa = None\n",
+    "usa = df['Country']\n",
     "\n",
     "# Slice all the rows for Canada\n",
     "canada = None\n",
