--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    ],
    "source": [
     "# Slice all the rows for USA\n",
-    "usa = df.loc['Country Name'=='United States']\n",
+    "usa = df.loc[df['Country Name'=='United States']\n",
     "\n",
     "# Slice all the rows for Canada\n",
     "canada = None\n",
