--- a/index.ipynb
+++ b/index.ipynb
@@ -207,15 +207,512 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country Name</th>\n",
+       "      <th>Country Code</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>14288</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1960</td>\n",
+       "      <td>180671000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14289</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1961</td>\n",
+       "      <td>183691000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14290</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1962</td>\n",
+       "      <td>186538000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14291</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1963</td>\n",
+       "      <td>189242000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14292</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1964</td>\n",
+       "      <td>191889000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14293</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1965</td>\n",
+       "      <td>194303000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14294</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1966</td>\n",
+       "      <td>196560000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14295</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1967</td>\n",
+       "      <td>198712000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14296</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1968</td>\n",
+       "      <td>200706000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14297</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1969</td>\n",
+       "      <td>202677000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14298</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>205052000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14299</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1971</td>\n",
+       "      <td>207661000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14300</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1972</td>\n",
+       "      <td>209896000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14301</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1973</td>\n",
+       "      <td>211909000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14302</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1974</td>\n",
+       "      <td>213854000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14303</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1975</td>\n",
+       "      <td>215973000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14304</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>218035000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14305</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1977</td>\n",
+       "      <td>220239000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14306</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1978</td>\n",
+       "      <td>222585000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14307</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1979</td>\n",
+       "      <td>225055000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14308</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>227225000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14309</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>229466000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14310</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1982</td>\n",
+       "      <td>231664000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14311</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1983</td>\n",
+       "      <td>233792000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14312</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>235825000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14313</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1985</td>\n",
+       "      <td>237924000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14314</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1986</td>\n",
+       "      <td>240133000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14315</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1987</td>\n",
+       "      <td>242289000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14316</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>244499000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14317</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1989</td>\n",
+       "      <td>246819000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14318</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1990</td>\n",
+       "      <td>249623000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14319</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>252981000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14320</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>256514000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14321</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1993</td>\n",
+       "      <td>259919000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14322</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>263126000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14323</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1995</td>\n",
+       "      <td>266278000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14324</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>269394000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14325</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>272657000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14326</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>275854000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14327</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>1999</td>\n",
+       "      <td>279040000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14328</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>282162411.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14329</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>284968955.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14330</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>287625193.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14331</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>290107933.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14332</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>292805298.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14333</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>295516599.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14334</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>298379912.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14335</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>301231207.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14336</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>304093966.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14337</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>306771529.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14338</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>309348193.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14339</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>311663358.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14340</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>313998379.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14341</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>316204908.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14342</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>318563456.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14343</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>320896618.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14344</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>323127513.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Country Name Country Code  Year        Value\n",
+       "14288  United States          USA  1960  180671000.0\n",
+       "14289  United States          USA  1961  183691000.0\n",
+       "14290  United States          USA  1962  186538000.0\n",
+       "14291  United States          USA  1963  189242000.0\n",
+       "14292  United States          USA  1964  191889000.0\n",
+       "14293  United States          USA  1965  194303000.0\n",
+       "14294  United States          USA  1966  196560000.0\n",
+       "14295  United States          USA  1967  198712000.0\n",
+       "14296  United States          USA  1968  200706000.0\n",
+       "14297  United States          USA  1969  202677000.0\n",
+       "14298  United States          USA  1970  205052000.0\n",
+       "14299  United States          USA  1971  207661000.0\n",
+       "14300  United States          USA  1972  209896000.0\n",
+       "14301  United States          USA  1973  211909000.0\n",
+       "14302  United States          USA  1974  213854000.0\n",
+       "14303  United States          USA  1975  215973000.0\n",
+       "14304  United States          USA  1976  218035000.0\n",
+       "14305  United States          USA  1977  220239000.0\n",
+       "14306  United States          USA  1978  222585000.0\n",
+       "14307  United States          USA  1979  225055000.0\n",
+       "14308  United States          USA  1980  227225000.0\n",
+       "14309  United States          USA  1981  229466000.0\n",
+       "14310  United States          USA  1982  231664000.0\n",
+       "14311  United States          USA  1983  233792000.0\n",
+       "14312  United States          USA  1984  235825000.0\n",
+       "14313  United States          USA  1985  237924000.0\n",
+       "14314  United States          USA  1986  240133000.0\n",
+       "14315  United States          USA  1987  242289000.0\n",
+       "14316  United States          USA  1988  244499000.0\n",
+       "14317  United States          USA  1989  246819000.0\n",
+       "14318  United States          USA  1990  249623000.0\n",
+       "14319  United States          USA  1991  252981000.0\n",
+       "14320  United States          USA  1992  256514000.0\n",
+       "14321  United States          USA  1993  259919000.0\n",
+       "14322  United States          USA  1994  263126000.0\n",
+       "14323  United States          USA  1995  266278000.0\n",
+       "14324  United States          USA  1996  269394000.0\n",
+       "14325  United States          USA  1997  272657000.0\n",
+       "14326  United States          USA  1998  275854000.0\n",
+       "14327  United States          USA  1999  279040000.0\n",
+       "14328  United States          USA  2000  282162411.0\n",
+       "14329  United States          USA  2001  284968955.0\n",
+       "14330  United States          USA  2002  287625193.0\n",
+       "14331  United States          USA  2003  290107933.0\n",
+       "14332  United States          USA  2004  292805298.0\n",
+       "14333  United States          USA  2005  295516599.0\n",
+       "14334  United States          USA  2006  298379912.0\n",
+       "14335  United States          USA  2007  301231207.0\n",
+       "14336  United States          USA  2008  304093966.0\n",
+       "14337  United States          USA  2009  306771529.0\n",
+       "14338  United States          USA  2010  309348193.0\n",
+       "14339  United States          USA  2011  311663358.0\n",
+       "14340  United States          USA  2012  313998379.0\n",
+       "14341  United States          USA  2013  316204908.0\n",
+       "14342  United States          USA  2014  318563456.0\n",
+       "14343  United States          USA  2015  320896618.0\n",
+       "14344  United States          USA  2016  323127513.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Slice all the rows for USA\n",
     "usa = df.loc[df['Country Name']=='United States']\n",
-    "usa# Slice all the rows for Canada\n",
-    "canada = None\n",
-    "\n",
+    "usa\n",
+    "# Slice all the rows for Canada\n",
+    "canada = Non\n",
     "# Inspect the head of USA and Canada"
    ]
   },
