Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -710,9 +710,9 @@
    "source": [
     "# Slice all the rows for USA\n",
     "usa = df.loc[df['Country Name']=='United States']\n",
-    "usa\n",
+    "\n",
     "# Slice all the rows for Canada\n",
-    "canada = Non\n",
+    "canada = df.loc[df['Country Name']=='Canada']\n",
     "# Inspect the head of USA and Canada"
    ]
   },
