--- a/index.ipynb
+++ b/index.ipynb
@@ -245,7 +245,7 @@
    "outputs": [],
    "source": [
     "# Subplot for USA\n",
-    "ax1 = None\n",
+    "ax1 = plt.subpl\n",
     "\n",
     "# Subplot for Canada\n",
     "ax2 = None"
