Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -257,8 +257,9 @@
    ],
    "source": [
     "# Subplot for USA\n",
-    "ax1 = plt.subplot\n",
-    "\n",
+    "ax1 = plt.subplot(1, 2, 1)\n",
+    "usa.plot(x='Year', y='Value', ax=ax1)\n",
+    "ax1.set_title(\"USA\")\n",
     "# Subplot for Canada\n",
     "ax2 = None"
    ]
