Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,7 +261,9 @@
     "usa.plot(x='Year', y='Value', ax=ax1)\n",
     "ax1.set_title(\"USA\")\n",
     "# Subplot for Canada\n",
-    "ax2 = None"
+    "ax2 = plt.subplot(1, 2, 1)\n",
+    "candada.plot(x='Year', y='Value', ax=ax1)\n",
+    "ax2.set_title(\"USA\")"
    ]
   },
   {
