Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -38,7 +38,7 @@
     "# Import matplotlib\n",
     "# Make sure matplotlib plots appear inline\n",
     "import pandas as pd\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
    ]
   },
