--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,15 @@
     }
    ],
    "source": [
-    "plt.figure(figsize = (20,10))\n"
+    "plt.figure(figsize = (20,10))\n",
+    "ax1 = plt.subplot(1, 2, 1)\n",
+    "usa.plot(x='Year', y='Value', ax=ax1)\n",
+    "ax1.set_title(\"USA\")\n",
+    "# Subplot for Canada\n",
+    "ax2 = plt.subplot(1, 2, 2)\n",
+    "canada.plot(x='Year', y='Value', ax=ax2)\n",
+    "ax2.set_title(\"Canada\")\n",
+    "plt.subplots_adjust"
    ]
   },
   {
