--- a/index.ipynb
+++ b/index.ipynb
@@ -340,9 +340,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 0      Value: foo\n",
+      "Index: 1      Value: bar\n",
+      "Index: 2      Value: baz\n"
+     ]
+    }
+   ],
    "source": [
     "sample_list = ['foo', 'bar', 'baz']\n",
     "\n",
