Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,7 @@
     "\n",
     "# Write your code below this line\n",
     "\n",
-    "\n",
+    "for index, value in enumarate(sample_lis)\n",
     "\n",
     "# Write your code above this line\n",
     "\n",
