--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,8 @@
     "\n",
     "# Write your code below this line\n",
     "\n",
-    "for index, value in enumarate(sample_lis)\n",
+    "for index, value in enumarate(sample_list_2):\n",
+    "    \n",
     "\n",
     "# Write your code above this line\n",
     "\n",
