Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,7 @@
     "# Write your code below this line\n",
     "\n",
     "for index, value in enumarate(sample_list_2):\n",
-    "    \n",
+    "    if index \n",
     "\n",
     "# Write your code above this line\n",
     "\n",
