Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,8 @@
     "# Write your code below this line\n",
     "\n",
     "for index, value in enumarate(sample_list_2):\n",
-    "    if index \n",
+    "    if index %2 != 0:\n",
+    "        \n",
     "\n",
     "# Write your code above this line\n",
     "\n",
