Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -385,7 +385,7 @@
     "\n",
     "for index, value in enumarate(sample_list_2):\n",
     "    if index %2 != 0:\n",
-    "        \n",
+    "        odds.append(in)\n",
     "\n",
     "# Write your code above this line\n",
     "\n",
