Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -397,7 +397,7 @@
     "for index, value in enumerate(sample_list_2):\n",
     "    if index %2 != 0:\n",
     "        odds.append(index)\n",
-    "        print()\n",
+    "        print(value \"at Index\")\n",
     "\n",
     "\n",
     "# Write your code above this line\n",
