Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -374,16 +374,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item at Index 1at Index 1\n",
+      "item at Index 3at Index 3\n",
+      "item at Index 5at Index 5\n",
+      "item at Index 7at Index 7\n",
+      "item at Index 9at Index 9\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "[1, 3, 5, 7, 9]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +408,7 @@
     "for index, value in enumerate(sample_list_2):\n",
     "    if index %2 != 0:\n",
     "        odds.append(index)\n",
-    "        print(str(value) + \"at Index\")\n",
+    "        print(str(value) + \"at Index \" + str(index))\n",
     "\n",
     "\n",
     "# Write your code above this line\n",
