Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -408,7 +408,7 @@
     "for index, value in enumerate(sample_list_2):\n",
     "    if index %2 != 0:\n",
     "        odds.append(index)\n",
-    "        print(str(value) + \"at Index \" + str(index))\n",
+    "        print(str(value) + str(index))\n",
     "\n",
     "\n",
     "# Write your code above this line\n",
