Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -469,7 +469,7 @@
     "    \n",
     "    # Set the title of each plot, so we know which country it represents\n",
     "    ax.set_title(countryname)\n",
-    " "
+    " plt.show()"
    ]
   },
   {
